tests/blackbox_tests/desktop-entry-missing-non-localized-key.desktop
# E: desktop-entry-missing-non-localized-key group 'Desktop Entry' key Name

[Desktop Entry]
Type = Application
Name[de] = Gizmo Enhancer
Name[ru] = Гизмо Энханцэр
